option('use_ticket_lock', type: 'boolean', value : false, description : 'Use ticket-based spinlocks instead of qspinlock')
option('ipc_debug', type: 'boolean', value : false, description : 'Enable IPC debug logging')
option('use_capnp', type: 'boolean', value : false, description : 'Build Cap\'n Proto support')
