option('use_ticket_lock', type: 'boolean', value : false, description : 'Use ticket-based spinlocks instead of qspinlock')
option('ipc_debug', type: 'boolean', value : false, description : 'Enable IPC debug logging')
option('use_capnp', type: 'boolean', value : false, description : 'Build Cap\'n Proto support')
option('use_simd', type: 'boolean', value : false, description : 'Enable SIMD math routines')
option('mcu', type: 'boolean', value : false, description : 'Build for Cortex-M microcontroller')
option('use_lto', type: 'boolean', value : false, description : 'Enable Link Time Optimization (ThinLTO)')
option('use_lld', type: 'boolean', value : false, description : 'Use LLVM LLD linker')
option('use_polly', type: 'boolean', value : false, description : 'Enable LLVM Polly polyhedral optimizations')
option('enable_asan', type: 'boolean', value : false, description : 'Enable AddressSanitizer')
option('enable_tsan', type: 'boolean', value : false, description : 'Enable ThreadSanitizer')
option('enable_ubsan', type: 'boolean', value : false, description : 'Enable UndefinedBehaviorSanitizer')
